<resources>
    <string name="app_name">Trello</string>
    <string name="splash_name">Trello</string>
    <string name="let_s_get_stated">Let\'s Get Stated</string>
    <string name="text_describe_below">Devices on Trello\'s Minimalist Interface.</string>
    <string name="text">Collaborate and Plan Together Across Multiple</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>

    <string name="sign_up_description_text">Enter your name, email id and password to register with us</string>
    <string name="sign_in_description_text">Enter your name, email id and password to sign in with us</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>

    <string name="please_click_back_again_to_exit">Please click back again to exit</string>
    <string name="please_wait">Please Wait&#8230;</string>

    <string name="nav_my_profile">My Profile</string>
    <string name="nav_sign_out">Sign Out</string>

    <string name="mobile">Mobile</string>
    <string name="update">UPDATE</string>

    <string name="create_board_title">Create Board</string>
    <string name="create">CREATE</string>
    <string name="board_name">Board Name</string>

    <string name="no_board_available">No Boards are available</string>
    <string name="action_add_list">Add List</string>
    <string name="action_add_card">Add Card</string>
    <string name="list_name">List name</string>
    <string name="members">Members</string>

    <string name="add_member">Add Member</string>
    <string name="cancel">CANCEL</string>
    <string name="add">ADD</string>
    <string name="search_member">Add Member</string>

    <string name="label_color">Label Color</string>
    <string name="select_color">Select Color</string>
    <string name="select_member">Select Member</string>
    <string name="due_date">Due Date</string>
    <string name="select_due_date">Select Due Date</string>
    <string name="hint_card_name">Card name</string>
    <string name="delete_card">Delete Card</string>
    <string name="str_select_label_color">Select Label Color</string>

    <string name="alert">Alert</string>
    <string name="confirmation_message_to_delete_card">Are you sure you want \'%1$s\'?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="default_notification_channel_id">trello_notification_channel_id</string>

</resources>