<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.cardview.widget.CardView
        android:elevation="@dimen/dialog_member_cv_elevation"
        app:cardCornerRadius="@dimen/dialog_member_cv_cornerRadius"
        android:background="@drawable/shape_dialog_rounded"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:gravity="center"
            android:orientation="vertical"
            android:padding="@dimen/dialog_member_title_padding"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_dialog_title"
                android:textStyle="bold"
                android:textColor="@color/primary_text_color"
                android:padding="@dimen/dialog_member_title_padding"
                android:text="@string/search_member"
                android:textSize="@dimen/dialog_member_title_text_size"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <View
                android:background="@color/divider_color"
                android:layout_marginTop="@dimen/dialog_member_divider_marginTopBottom"
                android:layout_marginBottom="@dimen/dialog_member_divider_marginTopBottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_member_divider_height"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginTop="@dimen/dialog_member_email_marginTop"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/et_email_add_member"
                    android:hint="@string/email"
                    android:textSize="@dimen/item_member_email_text_size"
                    android:inputType="textEmailAddress"
                    android:background="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>
            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_marginTop="@dimen/dialog_member_action_layout_marginTop"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dialog_member_action_layout_height">

                <TextView
                    android:id="@+id/tv_add_member"
                    android:layout_weight="1"
                    android:text="@string/add"
                    android:gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:padding="@dimen/dialog_member_action_layout_padding"
                    android:textSize="@dimen/dialog_member_action_layout_text_size"
                    android:textColor="@color/colorAccent"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

                <TextView
                    android:id="@+id/tv_cancel_member"
                    android:layout_weight="1"
                    android:textSize="@dimen/dialog_member_action_layout_text_size"
                    android:text="@string/cancel"
                    android:gravity="center"
                    android:padding="@dimen/dialog_member_action_layout_padding"
                    android:background="?attr/selectableItemBackground"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"/>

            </LinearLayout>
        </LinearLayout>

    </androidx.cardview.widget.CardView>

</FrameLayout>